# treehacks23-modal-server

./: .env.example  .gitignore  README.md  globals.py  pyproject.toml  server.py
data/: README.md
